--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -15,4 +15,4 @@ jobs:
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/silimium/silimium/actions/workflows/downstream/dispatches \
-            -d '{"source":"${{ GITHUB_REPOSITORY }}","ref":"${{ GITHUB_REF }}"}'
+            -d '{"source":"$GITHUB_REPOSITORY","ref":"$GITHUB_REF"}'
