--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -14,6 +14,7 @@ jobs:
           curl \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ secrets.UPSTREAM_TOKEN }}" \
             https://api.github.com/repos/silimium/silimium/actions/workflows/downstream.yml/dispatches \
-            -d '{"source":"$GITHUB_REPOSITORY","ref":"$GITHUB_REF"}'
+            -d '{"source":"$GITHUB_REPOSITORY","ref":"$GITHUB_REF"}' \
+            --fail
